fix: statement error

--- a/3rd_year/PL (Language Programming)/tasks/task1/remember_python.ipynb
+++ b/3rd_year/PL (Language Programming)/tasks/task1/remember_python.ipynb
@@ -1702,7 +1702,7 @@
       "cell_type": "code",
       "source": [
         "f = open(\"input.txt\")\n",
-        "linha1 = f.realine()\n",
+        "linha1 = f.readline()\n",
         "linha2 = f.readline()"
       ],
       "metadata": {
