--- a/3rd_year/PL (Language Programming)/tasks/task2/task2_python.ipynb
+++ b/3rd_year/PL (Language Programming)/tasks/task2/task2_python.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,10 +28,28 @@
     "\n",
     "def exercise1():\n",
     "  t1 = \"(a|b)*\"\n",
-    "  t2 = \"a* + \"\n",
+    "  t2 = \"a* + E\"\n",
     "  t3 = \"(ab)+a*\"\n",
-    "  t4 = \"a(a+b)*b\"\n",
+    "  t4 = \"a(a|b)*b\"\n",
     "  t5 = \"a+b*\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Respostas\n",
+    "\n",
+    "#### t1 : qualquer string composta somente por a's ou por b's e também strings com a's e b's sem qualquer tipo de ordem, permitindo permutação, alternancia e blocos.\n",
+    "\n",
+    "#### t2 : qualquer string que só possua a's ou epsilon\n",
+    "\n",
+    "#### t3 : qualquer string inicializada com \"ab\" e finalizando com uma sequencia de a's\n",
+    "\n",
+    "#### t4 : qualquer string que é inicializada por 1 a e finalizada com 1 b e no centro qualquer string com padrão que possui apenas a's ou b's seguindo o raciocínio em t1\n",
+    "\n",
+    "#### t5 : qualquer string incializada por 1 a e finaliza a string com uma sequência de b's arbitrária"
    ]
   },
   {
@@ -46,14 +64,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def exercise2():\n",
     "  t1 = \"a*+b*+c*\"\n",
     "  t2 = \"a*(ba)*b*\"\n",
-    "  t3 = \"a*(b++c+)a*\""
+    "  t3 = \"a*(b|c)+a*\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Respostas\n",
+    "\n",
+    "#### t1 : qualquer string composta por três sub-strings ordenadas, sendo elas a's, b's e c's\n",
+    "\n",
+    "#### t2 : qualquer string inicializada por uma sequência de a's, seguida de uma sequência de ba's necessariamente por esta ordem e finalizando por uma sequência de c's\n",
+    "\n",
+    "#### t3 : qualquer string incializada por uma sequência de a's seguida obrigatoriamente por uma sequência de b's ou c's, finalizando com umasequência de a's"
    ]
   },
   {
@@ -67,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +108,7 @@
        "[]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,6 +120,16 @@
     "  return re.findall(er,line)\n",
     "\n",
     "exercise3()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resposta\n",
+    "\n",
+    "#### a variável er tem que ser incializada por \"ab\" ou por uma sequência de \"ab\"'s, 1 'c', seguidamente ou uma sequência de d's ou um f, uma sequência obrigatória de e's finalizando com b. Por fim é obrigatório a string acabar com 'a'\n"
    ]
   }
  ],
