--- a/3rd_year/PL (Language Programming)/tasks/task3/task3.ipynb
+++ b/3rd_year/PL (Language Programming)/tasks/task3/task3.ipynb
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 183,
+      "execution_count": 184,
       "metadata": {
         "id": "RnuCrz2H0DWq"
       },
@@ -404,7 +404,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['eu', 'tu', 'ele', 'ela', 'nós', 'vós', 'ele', 'ela', 'delu', 'elu', 'elx', 'elx', 'Dele', 'dela', 'dele', 'dela']\n"
+            "['eu', 'tu', 'ele', 'ela', 'nós', 'vós', 'ele', 'ela', 'Dele', 'dela', 'dele', 'dela']\n"
           ]
         }
       ],
