fix: capture groups

--- a/3rd_year/PL (Language Programming)/tasks/task3/task3.ipynb
+++ b/3rd_year/PL (Language Programming)/tasks/task3/task3.ipynb
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "metadata": {
         "id": "ufl-7TGph9WH"
       },
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 184,
+      "execution_count": 4,
       "metadata": {
         "id": "RnuCrz2H0DWq"
       },
@@ -404,13 +404,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['eu', 'tu', 'ele', 'ela', 'nós', 'vós', 'ele', 'ela', 'Dele', 'dela', 'dele', 'dela']\n"
+            "['eu', 'tu', 'ele', 'ela', 'nós', 'vós', 'ele', 'ela', 'elu', 'elu', 'elx', 'elx', 'Dele', 'dela', 'dele', 'dela']\n"
           ]
         }
       ],
       "source": [
         "def pronomes(frase):\n",
-        "    return re.findall(r\"(?i:eu|tu|ele|ela|nós|vós|eles|elas|dele|deles|dela|delas)\",frase)\n",
+        "    return re.findall(r\"(?i:eu|tu|el[eaux]|nós|vós|el[es|as]|del[ea]|del[es|as])\",frase)\n",
         "print(pronomes(\"eu tu ele ela nós vós eles elas delu elu delx elx Dele dela deles delas\"))"
       ]
     },
